2008-08-13  H.J. Lu  <hongjiu.lu@intel.com>

PR middle-end/36701
	* expr.c (emit_group_store): Allocate stack temp with the
	largest alignment when copying from register to stack.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@139062 138bc75d-0d04-0410-961f-82ee72b054a4